[project]
name = "ec-payment"
version = "0.1.0"
description = ""
authors = [
    {name = "Hanggi Anggono",email = "anggonohanggi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic (>=2.12.3,<3.0.0)",
    "midtransclient (>=1.4.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "ec_payment", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
